# keyboarder

./: .gitignore  README.md  index.html  package-lock.json  package.json  personal.json  test.json  tsconfig.json  updated.json  vite.config.ts
.github/workflows/: tauri-build.yml  tauri-release.yml  version-bump.yml
samples/: sample-miryoku.json  sample-project.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: CanvasStage.tsx  Inspector.tsx  Sidebar.tsx
src/state/: store.ts
src/utils/: exporters.ts  importers.ts  keys.ts  units.ts
