[package]
name = "keyboarder"
version = "0.1.1"
description = "Local-first app to design and print key label layouts for keyboards and macro pads."
homepage = "https://github.com/JWebCoder/keyboarder"
authors = ["JWebCoder"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
